# agent-chat-ui

./: .dockerignore  .env.example  .env.production  .eslintrc.json  .gitignore  ANALYTICS_TROUBLESHOOTING.md  ARTIFACT_SYSTEM_ANALYSIS.md  CLAUDE.md  CODEBASE_OVERVIEW.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  FEATURE_REQUEST_UNIFIED_APPROVALS.md  GITHUB_ISSUE_READY_TO_PASTE.md  GITHUB_ISSUE_UNIFIED_APPROVALS.md  GOOGLE_ANALYTICS_EVENTS_DOCUMENTATION.md  GOOGLE_ANALYTICS_IMPLEMENTATION.md  GOOGLE_AUTH_TROUBLESHOOTING.md  NON_AGENT_FLOW_WIDGET_README.md  ONBOARDING_ANALYTICS_EVENTS.md  PASS_USERID_TO_LANGGRAPH.md  README.md  SEO_DOCUMENTATION.md  STATELESS_MODE_IMPLEMENTATION.md  SUBGRAPH_MESSAGE_PERSISTENCE_FIX.md  THREAD_TRACING_ANALYSIS.md  UI_EVENT_HANDLING_IMPLEMENTATION.md  UNIFIED_APPROVALS_PLAN.md  amplify.yml  build_log.txt  cloudbuild.yaml  docker-compose.yml  index.html  instrumentation.ts  jsonExample.md  middleware.ts  next.config.mjs  nodemon.json  package-lock.json  (+8 more)
.claude/: settings.local.json
.vercel/: project.json
backend/: .env.example  langgraph.json  pyproject.toml
backend/src/: agent.py  research_agent.py
docker/: docker-compose.yml
docs/: WIDGET_I18N_GUIDE.md
documentation/: INTERRUPT_WIDGETS_AUTHORING_GUIDE.md  LANGGRAPH_STREAM_CACHING_BEHAVIOR.md  LANGGRAPH_STREAM_CACHING_PLAN.md  interrupt.md
locales/: de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json  ru.json
public/: ai-info.json  chat-config.yaml  favicon-generator.html  full-description.md  manifest.json  settings.yaml
src/: App.tsx  auth.ts  (+2 more)
(+399 files in other folders)
